[package]
name = "sx13xx-conf"
version = "0.1.2-alpha.0"
authors = ["Louis Thiery <thiery.louis@gmail.com>"]
edition = "2018"
publish = false

description = "A utility for verifying SX13xx Configuration Files"
readme = "README.md"
keywords = ["semtech", "lora", "helium"]
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"]}
serde_json = "1"
structopt = "0.3"
regions = { path = "../regions" }
